--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,29 @@
-/* You can add global styles to this file, and also import other style files */
+body{
+  font-family: Arial, Helvetica, sans-serif;
+  color: #404C51;
+  margin: 0px;
+}
+
+label{
+  font-weight: bold;
+}
+
+.container{
+  max-width: 1170px;
+  margin: 0 auto; /*centraliza a div*/
+}
+
+.col-acoes{
+  width: 90px;
+  text-align: center;
+}
+
+a {
+  color: #337Ab7;
+  text-decoration: none;
+}
+
+a:hover, a:focus {
+  text-decoration: underline;
+}
+
