--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 
-<!--app-lancamento-cadastro></app-lancamento-cadastro-->
+<app-lancamento-cadastro></app-lancamento-cadastro>
 
 
 
