--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,19 @@
 <app-navbar></app-navbar>
-<app-lancamentos-pesquisa></app-lancamentos-pesquisa>
-
+<app-lancamento-cadastro></app-lancamento-cadastro>
 
 <!--
-  <app-lancamento-cadastro></app-lancamento-cadastro>
-  <app-pessoa-cadastro></app-pessoa-cadastro>
-  <app-pessoas-pesquisa></app-pessoas-pesquisa>
+<app-lancamentos-pesquisa></app-lancamentos-pesquisa>
+<app-pessoa-cadastro></app-pessoa-cadastro>
+<app-pessoas-pesquisa></app-pessoas-pesquisa>
 -->
 
 <ng2-toasty></ng2-toasty>
+
 <p-confirmDialog header="Confirmação" icon="fa fa-question-circle" #confirmacao>
   <p-footer>
-    <button type="button" pButton icon="fa fa-check" label="Sim" 
+    <button type="button" pButton icon="fa-check" label="Sim"
       (click)="confirmacao.accept()"></button>
-    <button type="button" pButton icon="fa fa-times" label="Não"
+    <button type="button" pButton icon="fa-times" label="Não"
       (click)="confirmacao.reject()"></button>
   </p-footer>
 </p-confirmDialog>
-
-
