--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<app-pessoa-cadastro></app-pessoa-cadastro>
+<app-lancamentos-pesquisa></app-lancamentos-pesquisa>
 
 <!--
 <app-lancamentos-pesquisa></app-lancamentos-pesquisa>
